<resources>
    <!-- Common properties -->
    <string name="app_name">FinancialApp</string>
    <string name="cab_checked_string">selected</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_start">Start</string>

    <string name="action_help">Help</string>

    <string name="field_name">Name</string>
    <string name="field_name_validation_error">The name must not be empty</string>

    <string name="field_description">Descr.</string>

    <!-- Help properties -->
    <string name="help_title">Help</string>
    <string name="help_profile_text">
        Before you can use this application, you have to create a profile.
        To do so, you have to push ADD NEW PROFILE, type in your name and a description for the profile.\n\n
        <b>Name:</b> “Max Mustermann”\n
        <b>Description:</b> “Business”\n\n
        Next step is to click on the SAVE button and your profile will be created.\n\n
        If you want to cancel the process, press CANCEL on the bottom of the “Add new profile” dialogue.\n\n
        You can always change the Profile or delete it by holding on it and either using the trash can to delete it or the pencil to change it.\n\n
        You can create as many profiles as you want.
    </string>
    <string name="help_menu_text">
        This is the main menu. Here you can navigate to the different activities.\n\n
        Choose an action by just pushing on one of the buttons below.\n\n
        These buttons will lead you to the submenus where you will find further information.
    </string>
    <string name="help_group_text">
        The purpose of groups is to sort your transactions logically and sum them up.\n
        This makes the analysis of you data more easy an you can gather an optimal view on the result.\n\n
        There are some given groups which you can extend or change to adapt them to your personal preferences. You can also add new groups.\n\n
        To create a new group you have to push ADD A NEW GROUP, type in a name and a description for the group.\n\n
        <b>Name:</b> “Sparetime”\n
        <b>Description:</b> “Sparetime expenditure”\n\n
        Next step is to click on the SAVE button and your group will be created.\n\n
        If you want to cancel the process, press CANCEL on the bottom of the “Add a new group” dialogue.\n\n
        You can always change the Profile or delete it by holding on it and either using the trash can to delete it or the pencil to change it.\n\n
        To create the groups from your transactions, just add the transaction to a group when you create it.
    </string>
    <string name="help_transaction_text">
        The purpose of transactions it to book new expenditures or revenues and to make them available for the analysis.\n\n
        To create a new transaction you have to push ADD A NEW TRANSACTION, type in a name, a description and an amount for the transaction. If the value is positive, the transaction is seen as income. If the value is negative the transaction is seen as expenditure.\n\n
        <b>Name:</b> “Income”\n
        <b>Description:</b> “Work”\n
        <b>Amount:</b> “3000”\n\n
        After that, just follow the given choices and choose if it is a single transaction or if it is a recurrent transaction.\n\n
        Next step is to click on the SAVE button and your transaction will be created.\n\n
        If you want to cancel the process, press CANCEL on the bottom of the “Add a new transaction” dialogue.\n\n
        You can always change the transaction or delete it by holding on it and either using the trash can to delete it or the pencil to change it.
    </string>
    <string name="help_analysis_text">
        The purpose of the analysis is to give you a view into the future.\n\n
        Here your incomes end expenditures get compared and visualized. You can choose any period of time for the analysis.\n\n
        To start the analysis you have to set a start value. Then you set a start and end date for the period you want to have a closer look at and press the start button to start the analysis.\n\n
        As a result you get the remains within the chosen period and inclusion of your transactions.\n\n
        This way you can calculate different scenarios or just hold the overview regarding your financial situation.\n\n
        This feature can also support you making difficult financial decisions.
    </string>

    <!-- Profile properties -->
    <string name="profile_add_title">Add a new profile</string>
    <string name="profile_edit_title">Edit a profile</string>
    <string name="profile_delete_title">Delete a profile</string>

    <string name="profile_lastUse">Last use</string>

    <!-- Menu properties -->
    <string name="menu_title">Main menu</string>

    <string name="menu_button_transaction">Transactions</string>
    <string name="menu_button_analyze">Analysis</string>
    <string name="menu_button_groups">Groups</string>
    <string name="menu_button_help">Help</string>

    <!-- Groups properties -->
    <string name="group_title">Groups</string>

    <string name="group_add_title">Add a new group</string>
    <string name="group_edit_title">Edit a group</string>
    <string name="group_delete_title">Delete a group</string>

    <string name="group_default_housekeeping_name">Housekeeping</string>
    <string name="group_default_housekeeping_descr">Housekeeping transactions</string>
    <string name="group_default_groceries_name">Grocerie</string>
    <string name="group_default_groceries_descr">Groceries transactions</string>
    <string name="group_default_restaurant_name">Restaurant</string>
    <string name="group_default_restaurant_descr">Restaurant transactions</string>
    <string name="group_default_transport_name">Transport</string>
    <string name="group_default_transport_descr">Transport transactions</string>
    <string name="group_default_entertainment_name">Entertainment</string>
    <string name="group_default_entertainment_descr">Entertainment transactions</string>
    <string name="group_default_personal_name">Personal</string>
    <string name="group_default_personal_descr">Personal transactions</string>
    <string name="group_default_health_name">Health</string>
    <string name="group_default_health_descr">Health transactions</string>
    <string name="group_default_insurance_name">Insurance</string>
    <string name="group_default_insurance_descr">Insurance transactions</string>
    <string name="group_default_realestate_name">Real estate</string>
    <string name="group_default_realestate_descr">Real estate transactions</string>
    <string name="group_default_clothing_name">Clothing</string>
    <string name="group_default_clothing_descr">Clothing transactions</string>
    <string name="group_default_education_name">Education</string>
    <string name="group_default_education_descr">Education transactions</string>
    <string name="group_default_holiday_name">Holiday</string>
    <string name="group_default_holiday_descr">Holiday transactions</string>
    <string name="group_default_freetime_name">Free time</string>
    <string name="group_default_freetime_descr">Free time transactions</string>
    <string name="group_default_salary_name">Salary</string>
    <string name="group_default_salary_descr">Salary transactions</string>

    <!-- Transactions properties -->
    <string name="transaction_title">Transactions</string>

    <string name="transaction_add_title">Add a new transaction</string>
    <string name="transaction_edit_title">Edit a transaction</string>
    <string name="transaction_delete_title">Delete a transaction</string>

    <string name="transaction_state">Transaction state</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_amount_unit">Euro</string>
    <string name="transaction_amount_validation_error">Amount must not be empty or 0</string>
    <string name="transaction_group">Group</string>
    <string name="transaction_group_validation_error">There must exist at least one group</string>
    <string name="transaction_state_unique">Uniquely at</string>
    <string name="transaction_state_daily">Daily</string>
    <string name="transaction_state_weekly">Weekly</string>
    <string name="transaction_state_monthly">Monthly at</string>
    <string name="transaction_state_yearly">Yearly at</string>

    <string name="transaction_date_init">2000:01:01</string>

    <string name="dialog_pick_week">weekday</string>
    <string name="dialog_pick_month">day</string>
    <string name="dialog_pick_year">month</string>

    <!-- Analysis properties -->
    <string name="analysis_title">Analysis</string>

    <string name="analysis_startValue">Start value</string>
    <string name="analysis_startValue_validation_error">Start value must not be empty</string>
    <string name="analysis_startDate">Start date</string>
    <string name="analysis_endDate">End date</string>
    <string name="calendar">Calendar</string>
    <string name="close">Close</string>
    <string name="week_picker">WeekPicker</string>
    <string name="month_picker">MonthPicker</string>
    <string name="year_picker">YearPicker</string>
    <string name="budget">0</string>
    <string name="date">Date</string>
</resources>
