<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.MenuActivity">

    <Button android:id="@+id/menu_button_transaction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:lineSpacingExtra="8sp"
        android:layout_margin="5dp"
        android:text="@string/menu_button_transaction" />

    <Button
        android:id="@+id/menu_button_analyze"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:lineSpacingExtra="8sp"
        android:layout_margin="5dp"
        android:text="@string/menu_button_analyze" />

    <Button
        android:id="@+id/menu_button_groups"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:lineSpacingExtra="8sp"
        android:layout_margin="5dp"
        android:text="@string/menu_button_groups" />

</LinearLayout>