<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:id="@+id/dialog_write_transaction_root_view">

    <!-- The Name Label and text field -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field_name"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:text=""
            android:id="@+id/basic_name"
            tools:ignore="Autofill,LabelFor"/>
    </LinearLayout>

    <!-- The Description label and text field -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/field_description"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />
        <EditText
            android:id="@+id/basic_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="3"
            android:text=""
            tools:ignore="Autofill,LabelFor"/>
    </LinearLayout>

    <!-- The Amount label and text field -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/transaction_amount"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />
        <EditText
            android:id="@+id/transaction_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:layout_weight="3"
            tools:ignore="Autofill,LabelFor"/>
    </LinearLayout>

    <!-- The Group label and spinner -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/transaction_group"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />
        <Spinner
            android:id="@+id/transaction_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            tools:ignore="Autofill,LabelFor"/>
    </LinearLayout>

    <!-- The Transaction label and RadioGroup -->
    <android.support.constraint.ConstraintLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/transaction_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/transaction_rb"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/rb_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/transaction_state_daily" />

            <RadioButton
                android:id="@+id/rb_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/transaction_state_weekly" />

            <RadioButton
                android:id="@+id/rb_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/transaction_state_monthly" />

            <RadioButton
                android:id="@+id/rb_yearly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/transaction_state_yearly" />

            <RadioButton
                android:id="@+id/rb_unique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/transaction_state_unique" />

        </RadioGroup>

        <ImageButton
            android:id="@+id/b_weekly"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            android:layout_width="60dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/calendar"
            android:onClick="onDateButtonClick"
            android:src="@android:drawable/arrow_down_float"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/b_monthly"
            app:layout_constraintStart_toEndOf="@+id/transaction_rb" />

        <ImageButton
            android:id="@+id/b_monthly"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/calendar"
            android:onClick="onDateButtonClick"
            android:src="@android:drawable/arrow_down_float"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/b_yearly"
            app:layout_constraintStart_toEndOf="@+id/transaction_rb" />

        <ImageButton
            android:id="@+id/b_yearly"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/calendar"
            android:onClick="onDateButtonClick"
            android:src="@android:drawable/arrow_down_float"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/b_unique"
            app:layout_constraintStart_toEndOf="@+id/transaction_rb" />

        <ImageButton
            android:id="@+id/b_unique"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/calendar"
            android:onClick="onDateButtonClick"
            android:src="@android:drawable/arrow_down_float"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/transaction_rb" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>